@@ -7,6 +7,7 @@ XXXX/XX/XX
   - #4492, Fix ST_Simplify ignoring the value of the 3rd parameter (Raúl Marín)
   - #4494, Fix ST_Simplify output having an outdated bbox (Raúl Marín)
   - #4493, Fix ST_RemoveRepeatedPoints output having an outdated bbox (Raúl Marín)
+  - #4495, Fix ST_SnapToGrid output having an outdated bbox (Raúl Marín)
 
 PostGIS 2.3.10
 2019/08/11
